# simple-mo2po

./: .editorconfig  CMakeLists.txt  Makefile  README  meson.build
include/: config_cmake.h.in
src/: ExtractPO.c  ExtractPO.h  Makefile  main.c  meson.build  mo.c  mo.h
tests/: main.zh.mo  main.zh.po  meson.build  test.sh
trans/: .gitignore  meson.build
